# 25live_scraper

./: .gitignore  README.md  examples.py  requirements.txt
collegenet/: __init__.py  __main__.py  pyproject.toml
